<resources>
    <string name="app_name">Translator-In-French</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="label_github">GITHUB</string>
    <string name="label_twitter">TWITTER</string>
    <string name="label_linkedin">LINKEDIN</string>
    <string name="label_about_header">This is a challenge by ardejob community</string>
    <string name="label_save">save</string>
    <string name="hint_word_in_english">word in english</string>
    <string name="label_add_your_language">Add your language</string>
    <string name="hint_word_in_your_language">word in your language</string>
    <string name="label_type_here">type here</string>
    <string name="label_switch_keyboard">Switch keyboard</string>
    <string name="label_home_header">English Language translator</string>
    <string name="label_update">Update</string>
    <string name="label_delete">delete</string>
    <string name="error_empty_input">input invalid</string>

    <!--    CUSTOM KEYBOARD-->
    <string name="simple_ime">French IME</string>
    <string name="subtype_fr_Fr">French (Fr)</string>
</resources>
